test/files/neg/userdefined_apply.check
userdefined_apply.scala:3: error: overloaded method apply needs result type
  private def apply(x: Int) = if (x > 0) new ClashOverloadNoSig(x) else apply("")
                                                                             ^
userdefined_apply.scala:8: error: method apply is defined twice
  conflicting symbols both originated in file 'userdefined_apply.scala'
case class ClashOverloadNoSig private (x: Int)
           ^
userdefined_apply.scala:13: error: overloaded method apply needs result type
  private def apply(x: Int) = if (x > 0) ClashRecNoSig(1) else ???
                                         ^
userdefined_apply.scala:19: error: overloaded method apply needs result type
 private def apply(x: Boolean) = if (x) NoClashNoSig(1) else ???
                                        ^
userdefined_apply.scala:25: error: overloaded method apply needs result type
  private def apply(x: Boolean) = if (x) NoClashOverload(1) else apply("")
                                         ^
5 errors found
